Added Optional Shading.